fix(css) fix cut off borders and barely visible scrollbars

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -166,7 +166,7 @@ form {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, .5);
+    background: #3D3D3D;
     border-radius: 4px;
 }
 
